tests/baselines/reference/parserAmbiguity2.errors.txt
parserAmbiguity2.ts(1,1): error TS2304: Cannot find name 'f'.
parserAmbiguity2.ts(1,3): error TS2304: Cannot find name 'g'.
parserAmbiguity2.ts(1,5): error TS2304: Cannot find name 'A'.
parserAmbiguity2.ts(1,8): error TS2304: Cannot find name 'B'.


==== parserAmbiguity2.ts (4 errors) ====
    f(g<A, B>7);
    ~
!!! error TS2304: Cannot find name 'f'.
      ~
!!! error TS2304: Cannot find name 'g'.
        ~
!!! error TS2304: Cannot find name 'A'.
           ~
!!! error TS2304: Cannot find name 'B'.